	2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.3 released.

2009-08-24  Jaroslav Hajek  <highegg@gmail.com>

	* acx_blas_f77_func.m4: Fix typo.

2009-08-18  John W. Eaton  <jwe@octave.org>

	* acx_blas_f77_func.m4 (ACX_BLAS_F77_FUNC): Save and restore LIBS.

2009-07-16  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (MAGICK_LIBS): Don't pass --ldflags to $(MAGICK_CONFIG).

2009-07-09  John W. Eaton  <jwe@octave.org>

	* configure.in: Don't use system strftime on MinGW systems.

	2009-07-21  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.2 released.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@polynomial/subsref.m: Handle ':' correctly.
	* examples/@polynomial/subsasgn.m: Ditto.

2009-05-22 Benjamin Lindner <lindnerb@users.sourceforge.net>

	* mkoctfile.cc.in: mask MSVC specific linker flags for mex output

	2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.0 released.

2009-06-02  Robert T. Short  <octave@phaselockedsystems.com>

	* examples/@polynomial: Fix end method for zero based indexing.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@polynomial/subsref.m: Allow chained subscripts,
	fix behavior according to docs.
	* examples/@polynomial/subsasgn.m: Allow chained subscripts,
	fix behavior according to docs.

2009-06-02  Robert T. Short  <octave@phaselockedsystems.com>

	* examples/@polynomial: Remove tabs from all functions so
	documentation looks right.  Fix a bunch of methods
	that didn't work.  Add a method referred to in the docs
	that didn't exist.

2009-05-26  John W. Eaton  <jwe@octave.org>

	* src/dirfns.cc (Fpathsep): Allow path separator to be set.

2009-03-17  Thomas Weber  <thomas.weber.mail at gmail.com>

        * configure.in: fix typo with regards to termios.h

2009-05-25  Jaroslav Hajek  <highegg@gmail.com>

	* examples/@FIRfilter/Makefile.in: New file.
	* examples/Makefile.in: Include it.
	* configure.in: Ditto.

2009-05-24  Benjamin Lindner <lindnerb@users.sourceforge.net>
