@@ -1,3 +1,7 @@
+2009-08-05  John W. Eaton  <jwe@octave.org>
+
+	* Makefile.in (LINK_DEPS): Include $(PTHREAD_LIBS) in the list.
+
 2009-11-17  Jaroslav Hajek  <highegg@gmail.com>
 
 	* base-aepbal.h (permuting_vector): Fix lower part swapping.
