@@ -1,3 +1,9 @@
+2009-08-04  John W. Eaton  <jwe@octave.org>
+
+	* acx_pthread.m4: New file.
+	* configure.in: Include it and invoke ACX_PTHREAD macro.  Print
+	ptrhead flags and libraries in summary output.
+
 	2009-09-18  Jaroslav Hajek  <highegg@gmail.com>
 
 	Version 3.2.3 released.
